--- a/06.멀티미디어관련태그.html
+++ b/06.멀티미디어관련태그.html
@@ -12,7 +12,7 @@
     <h1>이미지 관련 태그</h1>
     <h3>* src속성</h3>
     <figure>
-        <img src="resources/img/maple.jpg" alt="">
+        <img src="resources/img/img1.jpg" alt="">
         <figcaption>단풍</figcaption>
     </figure>
     <h3>* alt 속성</h3>
@@ -21,5 +21,64 @@
         - 시각장애인들을 위한 스크린리더(화면낭독기)에서 이미지를 읽어주는 설명 문구
     </p>
     <img src="resources/img/maple1.jpg" alt="단풍">
+
+    <h3>* width heigh</h3>
+
+    <p>
+        - 이미지의 가로, 세로 길이 조절 가능<br>
+        - 고정길이(px), 가변길이(%)로 지정 => 기본값 : px
+    </p>
+    <h4>고정길이단위(px) == 기본값 : 화면사이즈가 조정되어도 크기는 변경되지 않는다.  </h4>
+        <img src="resources/img/img1.jpg" width="250" height="200">
+        <img src="resources/img/img2.jpg" width="250" height="200">
+        <img src="resources/img/img3.jpg" width="250" height="200">
+        <img src="resources/img/img4.jpg" width="250" height="200">
+    <br><br>
+    <h4>가변길이단위(%) : 화면사이즈가 또는 부모요소사이즈에 따라 이미지의 크기도 같이 변경됨</h4>
+        <img src="resources/img/img1.jpg" width="23%" height="200">
+        <img src="resources/img/img2.jpg" width="23%" height="200">
+        <img src="resources/img/img3.jpg" width="23%" height="200">
+        <img src="resources/img/img4.jpg" width="23%" height="200">
+    
+    <h3>* 이미지 맵</h3>
+
+    <p>
+        이미지를 구역별로 나누어 링크를 걸어주는 태그로 &lt;img&gt; 에 usemap 속성 지정
+    </p>
+    <!-- 
+        <img src = "이미지url" usemap="#맵이름">
+        <map name="맵이름">
+            <area shape = "모양" coords = "시작위치, 끝위치" href = "링크경로" target = "열리는 위치">
+            <area shape = "모양" coords = "시작위치, 끝위치" href = "링크경로" target = "열리는 위치">
+            <area shape = "모양" coords = "시작위치, 끝위치" href = "링크경로" target = "열리는 위치">
+        </map>
+        - map 자동 생성 사이트 : https://www.image-map.net/
+     -->
+    <img src="resources/img/seoul.png" usemap="#seoul">
+    <map name = "seoul">
+        <area target="_blank" alt="강서" title="강서" href="https://www.gangseo.seoul.kr/index" coords="44,154,45,160,46,167,46,176,44,182,37,189,36,195,36,207,31,209,25,212,21,216,21,226,15,229,19,236,23,243,33,246,36,251,40,257,47,257,54,252,65,251,71,245,77,243,83,247,88,252,91,257,96,261,102,263,109,262,115,258,117,251,118,244,124,241,132,240,128,232,116,219,113,212,107,205,79,183,76,178,65,167" shape="poly">
+    </map>
+    <hr>
+    <h1>미디어 관련 태그</h1>
+    <h3>오디오 관련 태그</h3>
+    <!-- 
+        <audio src="" [controls, autoplay, loop]> </audio>
+        <audio src="" [controls, autoplay, loop] /> 
+        
+        - src : 오디오 경로
+        - controls : 재생도구 출력 여부
+        - autoplay : 자동재생여부(크롬x, 엣지x)
+        - loop : 반복재생 여부
+    -->
+    <audio src="resources/audio/love_lee.mp3" controls loop></audio>
+
+    <hr>
+
+    <h3>비디오 관련 태그</h3>
+    <!-- 
+        <video src = ""[controls autoplay loop width="" height="" psoter="썸네일이미지경로"]>
+     -->
+     <video src="resources/video/video1.mp4" controls width="640" poster="resources/img/img5.jpg"></video>
+
 </body>
 </html>
