--- a/09.입력양식및폼관련태그.html
+++ b/09.입력양식및폼관련태그.html
@@ -234,7 +234,10 @@
             <option value="김밥">김밥</option>
             <option value="짜장면">짜장면</option>
         </select>
-
+        수강신청 :
+        <select>
+            <option value="archi">건축공학과</option>
+        </select>
         <h3> html5에서 새로 추가된 기능 datalist</h3>
         <p>
             - 내가 제시한 목록들 중에서 선택할 수도 있고 만약 목록에 없다면 직접 입력 가능
